--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.gcu</groupId>
-	<artifactId>topic4-3</artifactId>
+	<artifactId>cloudTestApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>topic4-3</name>
-	<description>Topic 4-3</description>
+	<name>cloudTestApp</name>
+	<description>cloudTestApp</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -48,6 +48,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 	</dependencies>
 
